RESOLVED FIXED134233
DOMWindow.outerWidth/outerHeight don't return useful values, so return 0
https://bugs.webkit.org/show_bug.cgi?id=134233
Summary DOMWindow.outerWidth/outerHeight don't return useful values, so return 0
Martin Hock
Reported 2014-06-23 19:03:48 PDT
DOMWindow.outerWidth/outerHeight don't return useful values, so return 0. Also, revert r169281.
Attachments
patch (4.37 KB, patch)
2014-06-23 19:50 PDT, Martin Hock
benjamin: review+
Martin Hock
Comment 1 2014-06-23 19:50:00 PDT
Martin Hock
Comment 2 2014-06-24 10:45:17 PDT
Martin Hock
Comment 3 2014-06-24 10:45:50 PDT
Note You need to log in before you can comment on or make changes to this bug.