[iOS] DOMWindow::outerWidth and outerHeight don't return useful values, so return 0. Also, revert r169281. https://bugs.webkit.org/show_bug.cgi?id=134233 <rdar://problem/17060183>

Reviewed by Benjamin Poulain.

Source/WebCore:
* page/DOMWindow.cpp:
(WebCore::DOMWindow::outerHeight):
(WebCore::DOMWindow::outerWidth):

Source/WebKit2:
* UIProcess/Cocoa/UIDelegate.h:
* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::windowFrame): Deleted.
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::convertToUserSpace):

Canonical link: https://commits.webkit.org/152231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170373 268f45cc-cd09-0410-ab3c-d52691b4dbfc